fix: gradient on mobile

--- a/src/widgets/rainbow/style.css
+++ b/src/widgets/rainbow/style.css
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 1500px;
   z-index: -1;
   border-radius: 14px 14px 0px 0px;
   --gradient-color-1: #fd7378;
